[tool.poetry]
name = "monty_hall"
version = "0.1.0"
description = ""
authors = ["Michael Heinz <michael_heinz@berkeley.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
